--- a/gblog-blog/src/main/resources/application.yml
+++ b/gblog-blog/src/main/resources/application.yml
@@ -2,10 +2,10 @@ server:
   port: 7777
 spring:
   datasource:
-    # url: jdbc:mysql://localhost:3306/g_blog?characterEncoding=utf-8
+#    url: jdbc:mysql://localhost:3306/g_blog?characterEncoding=utf-8
     url: jdbc:mysql://bj-cdb-rgovulxo.sql.tencentcdb.com:60172/g_blog?characterEncoding=utf-8
     driver-class-name: com.mysql.cj.jdbc.Driver
-    name: root
+    username: root
     password: 4265474264@Root
   servlet:
     multipart:
