--- a/gblog-framework/pom.xml
+++ b/gblog-framework/pom.xml
@@ -38,10 +38,10 @@
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
         <!--security-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+        <!--<dependency>-->
+        <!--    <groupId>org.springframework.boot</groupId>-->
+        <!--    <artifactId>spring-boot-starter-security</artifactId>-->
+        <!--</dependency>-->
         <!--redis-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
