--- a/gblog-blog/src/main/resources/application.yml
+++ b/gblog-blog/src/main/resources/application.yml
@@ -2,15 +2,58 @@ server:
   port: 7777
 spring:
   datasource:
-#    url: jdbc:mysql://localhost:3306/g_blog?characterEncoding=utf-8
+    #    url: jdbc:mysql://localhost:3306/g_blog?characterEncoding=utf-8
     url: jdbc:mysql://bj-cdb-rgovulxo.sql.tencentcdb.com:60172/g_blog?characterEncoding=utf-8
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 4265474264@Root
+    # 连接池
+    hikari:
+      # 连接池名
+      pool-name: DateHikariCP
+      # 最小空闲连接数
+      minimum-idle: 5
+      # 空闲连接最大存活时间，默认600000（10分钟）
+      idle-timeout: 180000
+      # 最大连接数，默认10
+      maximum-pool-size: 10
+      # 从连接池返回的连接自动提交
+      auto-commit: true
+      # 连接最大存活时间，1800000（30分钟）
+      max-lifetime: 1800000
+      # 连接超时时间，默认30000（30秒）
+      connection-timeout: 30000
+      # 测试连接是否可用的查询语句
+      connection-test-query: SELECT 1   #这个是mysql的测试语句
+      #connection-test-query: SELECT * from dual  #这个是oracle的测试语句
+
+  #redis配置
+  redis:
+    #服务器地址
+    host: localhost
+    #端口
+    port: 6379
+    #redis密码
+    password:
+    #数据库，默认是0
+    database: 0
+    #超时时间
+    timeout: 1209600000ms
+    lettuce:
+      pool:
+        #最大链接数，默认8
+        max-active: 8
+        #最大连接阻塞等待时间，默认-1
+        max-wait: 10000ms
+        #最大空闲连接，默认8
+        max-idle: 200
+        #最小空闲连接，默认0
+        min-idle: 5
   servlet:
     multipart:
       max-file-size: 2MB
       max-request-size: 5MB
+# mybatis-plus配置
 mybatis-plus:
   configuration:
     # 日志
@@ -21,3 +64,4 @@ mybatis-plus:
       logic-delete-value: 1
       logic-not-delete-value: 0
       id-type: auto
+  mapper-locations: classpath*:/mapper
