--- a/pom.xml
+++ b/pom.xml
@@ -36,13 +36,13 @@
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
-                <version>2.0.12</version>
+                <version>1.2.83</version>
             </dependency>
             <!--jwt-->
             <dependency>
                 <groupId>io.jsonwebtoken</groupId>
-                <artifactId>jjwt-api</artifactId>
-                <version>0.11.5</version>
+                <artifactId>jjwt</artifactId>
+                <version>0.9.1</version>
             </dependency>
             <!--MyBatisPlus-->
             <dependency>
