--- a/gblog-blog/src/main/resources/application.yml
+++ b/gblog-blog/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 7777
 spring:
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+
   datasource:
     #    url: jdbc:mysql://localhost:3306/g_blog?characterEncoding=utf-8
     url: jdbc:mysql://bj-cdb-rgovulxo.sql.tencentcdb.com:60172/g_blog?characterEncoding=utf-8
@@ -65,3 +69,4 @@ mybatis-plus:
       logic-not-delete-value: 0
       id-type: auto
   mapper-locations: classpath*:/mapper
+
